--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 Metrics/LineLength:
-  Max: 120
+  Max: 125
 Layout/EmptyLinesAroundModuleBody:
   EnforcedStyle: empty_lines_except_namespace
 Style/SymbolArray:
@@ -27,6 +27,7 @@ Lint/ScriptPermission:
 Metrics/MethodLength:
   Exclude:
     - 'spec/*'
+    - 'features/*'
 Metrics/BlockLength:
   Exclude:
     - '*.gemspec'
