--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,11 @@ sudo: false
 language: ruby
 rvm:
   - 2.5.3
-before_install: gem install bundler -v 1.16.2
+  - jruby-9.1.16.0
+env:
+  global:
+  - JRUBY_OPTS="--debug"
+before_install: gem install bundler
+script:
+  - bundle exec rake
+cache: bundler
